Obtenção da lista de papéis de usuários.
